--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@ngrx/store": "^12.4.0",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.0.0-beta3",
     "font-awesome": "^4.7.0",
+    "ngx-bootstrap": "^7.1.0",
+    "ngx-mask": "^12.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
