--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
     "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "heroku-postbuild": "ng build --prod"
   },
   "engines": {
-    "node": "12.19.0",
-    "npm": "6.14.8"
+    "node": "14.17.3",
+    "npm": "6.14.13"
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~12.1.1",
     "@angular/animations": "~12.1.1",
+    "@angular/cli": "^12.2.9",
     "@angular/common": "~12.1.1",
     "@angular/compiler": "~12.1.1",
+    "@angular/compiler-cli": "^12.1.5",
     "@angular/core": "~12.1.1",
     "@angular/forms": "~12.1.1",
     "@angular/platform-browser": "~12.1.1",
@@ -33,9 +37,13 @@
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
+    "typescript": "~4.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~12.1.1",
+    "@angular/cli": "^12.2.9",
+    "@angular/compiler-cli": "^12.1.5",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.7.0",
@@ -44,9 +52,6 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "@angular/cli": "^11.0.4",
-    "@angular/compiler-cli": "^11.0.4",
-    "typescript": "~4.0.2",
-    "@angular-devkit/build-angular": "~0.1100.4"
+    "typescript": "~4.3.2"
   }
 }
