--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "postinstall": "ng build --aot"
+    "heroku-postbuild": "ng build --prod"
   },
   "engines": {
     "node": "14.17.3",
