--- a/package.json
+++ b/package.json
@@ -3,15 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
-    "build": "ng build --prod",
+    "start": "ng serve",
+    "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "postinstall": "npm run build"
-  },
-  "engines": {
-    "node": "14.17.3",
-    "npm": "6.14.13"
   },
   "private": true,
   "dependencies": {
